# tictactou

./: App.h  Board.cpp  Board.h  CMakeLists.txt  Game1.cpp  Game1.h  Util.cpp  Util.h  machine_minimax.cpp  main.cpp  minimax.cpp  minimax.h
res/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
